--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>HELLO WORLD, I'M MUNASHE</h1>
     <section> 
       <p>Honest and energetic young lad keen to diversify my abilities in problem identification and solving, while developing and strengthening my life skills and capabilities within the electrical engineering sector.</p>
-      <a href="facebook.com/munashe.b.jojo/" target="_blank">
+      <a href="https://facebook.com/munashe.b.jojo/" target="_blank">
         <i class="fab fa-facebook-f"></i>
       </a>
       <a href="https://github.com/munaxe" target="_blank">
