--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
       </a>
         
     </section>
+    <button>
        <a href="https://www.mediafire.com/file/2f4amtnjr7yfffl/Munashe_Walter_Jojo_CV.pdf/file">Click Here to Download CV</a>
-<br>
+    </button>
+      <br>
       
 <i class="fa fa-envelope"> jojomunashe@gmail.com</i>
             <br>
